--- a/config/contour/internal.yaml
+++ b/config/contour/internal.yaml
@@ -4791,7 +4791,7 @@ spec:
         - --log-level info
         command:
         - envoy
-        image: docker.io/envoyproxy/envoy:v1.24.0
+        image: rawlingsj80/envoy:experiment1
         imagePullPolicy: IfNotPresent
         name: envoy
         env:
